--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -233,7 +233,7 @@
     </div>
 
     <div class="relative isolate overflow-hidden">
-      <div class="px-6 sm:px-6 lg:px-8">
+      <div class="px-6 py-24 sm:px-6 lg:px-8">
         <div class="mx-auto max-w-4xl text-center">
           <h1 class="mt-10 text-4xl font-bold tracking-tight text-white sm:text-5xl">
             Your most successful <span class="text-green-300">ad campaign</span>
