--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -16,7 +16,12 @@
         </span>
       </a>
     </div>
-    <img src={@ad.composite_asset_url} class="h-16 rounded-lg" />
+    <img
+      src={@ad.composite_asset_url}
+      alt={@ad.website_url}
+      class="box-content h-16 object-cover border-[3px] rounded-xl"
+      style={"border-color: #{@ad.border_color || "#fff"}"}
+    />
     <div class="shrink-0 flex items-center gap-4">
       <div class="flex items-center gap-2">
         <button
