make border radii consistent

--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -64,7 +64,7 @@
   </header>
   <main class="space-y-4">
     <div
-      class="rounded-lg border text-card-foreground shadow-inner bg-white/5 ring-1 ring-white/10"
+      class="rounded-lg lg:rounded-2xl border text-card-foreground shadow-inner bg-white/5 ring-1 ring-white/10"
       data-v0-t="card"
     >
       <div class="flex p-6 justify-center items-center">
@@ -90,7 +90,7 @@
     </div>
     <div class="grid grid-cols-2 gap-4">
       <div
-        class="rounded-lg border text-card-foreground shadow-inner bg-white/5 ring-1 ring-white/10 p-6"
+        class="rounded-lg lg:rounded-2xl border text-card-foreground shadow-inner bg-white/5 ring-1 ring-white/10 p-6"
         data-v0-t="card"
       >
         <h3 class="whitespace-nowrap text-xl font-semibold leading-none tracking-tight mb-3 ml-3">
@@ -127,7 +127,7 @@
         </div>
       </div>
       <div
-        class="rounded-lg border text-card-foreground shadow-inner bg-white/5 ring-1 ring-white/10 p-6"
+        class="rounded-lg lg:rounded-2xl border text-card-foreground shadow-inner bg-white/5 ring-1 ring-white/10 p-6"
         data-v0-t="card"
       >
         <h3 class="whitespace-nowrap text-xl font-semibold leading-none tracking-tight mb-3 ml-3">
@@ -204,7 +204,7 @@
     </div>
 
     <div
-      class="rounded-lg border text-card-foreground shadow-inner bg-white/5 ring-1 ring-white/10 p-6"
+      class="rounded-lg lg:rounded-2xl border text-card-foreground shadow-inner bg-white/5 ring-1 ring-white/10 p-6"
       data-v0-t="card"
     >
       <h3 class="whitespace-nowrap text-xl font-semibold leading-none tracking-tight mb-3 ml-3">
