--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -230,14 +230,29 @@
               <%= for product_review <- @product_reviews do %>
                 <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
                   <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0">
-                    <div class="space-y-2">
-                      <div class="text-sm text-gray-100">
-                        <%= product_review.video.title %>
+                    <.link
+                      navigate={"/#{product_review.video.user.handle}/#{product_review.video.id}?t=#{product_review.clip_from}"}
+                      class="flex items-center gap-2"
+                    >
+                      <img
+                        src={product_review.thumbnail_url}
+                        class="h-24 object-cover aspect-video rounded-lg"
+                      />
+                      <div class="space-y-1">
+                        <div class="text-sm text-gray-100">
+                          <%= product_review.video.user.name %> &bull; <%= product_review.video.title %>
+                        </div>
+                        <div class="text-xs text-gray-300">
+                          Streamed on <%= product_review.video.inserted_at
+                          |> Calendar.strftime("%b %d, %Y") %>
+                        </div>
+                        <div class="text-xs text-purple-300">
+                          <%= Library.to_hhmmss(product_review.clip_from) %> - <%= Library.to_hhmmss(
+                            product_review.clip_to
+                          ) %>
+                        </div>
                       </div>
-                      <div class="text-xs text-gray-300">
-                        <%= product_review.video.inserted_at |> Calendar.strftime("%b %d, %Y") %>
-                      </div>
-                    </div>
+                    </.link>
                   </td>
                   <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right">
                     <%= format_duration(product_review.clip_to - product_review.clip_from) %>
