--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -83,7 +83,7 @@
           </div>
           <div>
             <p class="text-xs text-gray-300 tracking-tight font-bold uppercase">Creators</p>
-            <p class="text-2xl font-bold"><%= @stats.streams %></p>
+            <p class="text-2xl font-bold"><%= @stats.creators %></p>
           </div>
         </div>
       </div>
