add explicit aspect ratio

--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -19,7 +19,7 @@
     <img
       src={@ad.composite_asset_url}
       alt={@ad.website_url}
-      class="box-content h-16 object-cover border-[3px] rounded-xl"
+      class="box-content h-16 aspect-[1092/135] object-cover border-[3px] rounded-xl"
       style={"border-color: #{@ad.border_color || "#fff"}"}
     />
     <div class="shrink-0 flex items-center gap-4">
