--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -1,3 +1,4 @@
 ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
 export RELEASE_DISTRIBUTION=name
 export RELEASE_NODE=$FLY_APP_NAME@$ip
+export ERL_CRASH_DUMP=/data/erl_crash.dump
