--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -1,4 +1,5 @@
 ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
 export RELEASE_DISTRIBUTION=name
 export RELEASE_NODE=$FLY_APP_NAME@$ip
-export ERL_CRASH_DUMP=/data/erl_crash.dump
+export ERL_CRASH_DUMP=/dev/stderr
+export ERL_CRASH_DUMP_BYTES=8192
