update assets & copy

--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -386,9 +386,9 @@
           <article class="relative isolate flex flex-col gap-8 lg:flex-row">
             <div class="relative aspect-video lg:w-[30rem] lg:shrink-0">
               <img
-                src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3603&q=80"
+                src={~p"/images/in-video-ad.png"}
                 alt=""
-                class="absolute inset-0 h-full w-full rounded-2xl bg-gray-900 object-cover"
+                class="absolute inset-0 h-full w-full rounded-sm bg-gray-900 object-cover"
               />
               <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-50/10"></div>
             </div>
@@ -406,9 +406,9 @@
           <article class="relative isolate flex flex-col gap-8 lg:flex-row">
             <div class="relative aspect-video lg:w-[30rem] lg:shrink-0">
               <img
-                src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3603&q=80"
+                src="https://fly.storage.tigris.dev/algora/blurbs/4c519741-476c-4b74-ad50-fa72c2bddb1b.png"
                 alt=""
-                class="absolute inset-0 h-full w-full rounded-2xl bg-gray-900 object-cover"
+                class="absolute inset-0 h-full w-full rounded-sm bg-gray-900 object-cover"
               />
               <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-50/10"></div>
             </div>
@@ -426,9 +426,9 @@
           <article class="relative isolate flex flex-col gap-8 lg:flex-row">
             <div class="relative aspect-video lg:w-[30rem] lg:shrink-0">
               <img
-                src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3603&q=80"
+                src={~p"/images/sponsored-stream.png"}
                 alt=""
-                class="absolute inset-0 h-full w-full rounded-2xl bg-gray-900 object-cover"
+                class="absolute inset-0 h-full w-full rounded-sm bg-gray-900 object-cover"
               />
               <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-50/10"></div>
             </div>
@@ -438,7 +438,7 @@
                   <span class="absolute inset-0"></span> Sponsored streams
                 </h3>
                 <p class="mt-5 text-lg leading-6 text-gray-200">
-                  Full-length streams showcasing your product. Reach millions across Twitch, YouTube, and X.
+                  Full-length streams showcasing and building with your product. Reach millions across Twitch, YouTube, and X.
                 </p>
               </div>
             </div>
